--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="space"></div>
     <p class="title">Currently</p>
-    <p>Frontend engineer, <a href="https://www.bukalapak.com">Bukalapak</a></p>
+    <p>Frontend engineer, <a href="https://www.bukalapak.com">Bukalapak.</a></p>
 
     <div class="space"></div>
     <p class="title">Lives in</p>
