title space margin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="main-content">
     <h1>Iqbal Perkasa</h1>
 
-    <div class="space"></div>
+    <div class="space space-small"></div>
     <p>Web product developer</p>
     <p>Software engineer</p>
 
