--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="space"></div>
     <p class="title">Stacks</p>
-    <p>Vue, Nuxt, Haml, Sass, Bootstrap, jQuery, PHP, Rails</p>
+    <p>JavaScript, Vue, Haml, Sass, PHP, Rails</p>
 
     <div class="space"></div>
     <p class="title">Handles</p>
