--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Iqbal Perkasa</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Website of Iqbal Perkasa, a web product developer from Bandung, Indonesia.">
-  <meta property="og:description" content="Website of Iqbal Perkasa, a web product developer from Bandung, Indonesia.">
+  <meta name="description" content="Website of Iqbal Perkasa, a web product developer from Indonesia.">
+  <meta property="og:description" content="Website of Iqbal Perkasa, a web product developer from Indonesia.">
   <meta property="og:image:url" content="http://iqbalperkasa.com/thumbnail.jpeg">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:url" content="http://iqbalperkasa.com">
