--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:url" content="http://iqbalperkasa.com">
   <meta property="og:image:height" content="600">
   <meta property="og:image:height" content="600">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Iqbal Perkasa">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
