add service worker

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://iqbalperkasa.com" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Iqbal Perkasa" />
+    <link rel="stylesheet" href="/style.css">
     <title>Iqbal Perkasa</title>
   </head>
   <body>
