--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       </section>
       <section>
         <p class="title">Currently</p>
-        <p>Frontend engineer, <a href="https://www.crunchbase.com/organization/bukalapak">Bukalapak</a></p>
+        <p>Frontend engineer, <a href="https://rock.so/">Rock</a></p>
+      </section>
+      <section>
+        <p class="title">Past</p>
+        <p>Bukalapak</p>
       </section>
       <section>
         <p class="title">Residence</p>
