remove small section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Iqbal Perkasa</h1>
       </header>
-      <section class="small">
+      <section>
         <p>Web product developer</p>
         <p>Software engineer</p>
       </section>
