--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
       <header>
         <h1>Iqbal Perkasa</h1>
       </header>
-      <section class="small">
+      <section>
         <p>Web product developer</p>
         <p>Software engineer</p>
       </section>
       <section>
         <p class="title">Currently</p>
-        <p>Frontend engineer, <a href="https://www.crunchbase.com/organization/bukalapak">Bukalapak</a></p>
+        <p>Frontend engineer, <a href="https://rock.so/">Rock</a></p>
+      </section>
+      <section>
+        <p class="title">Past</p>
+        <p>Bukalapak</p>
       </section>
       <section>
         <p class="title">Residence</p>
