--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://github.com/iqbalperkasa">GitHub</a>
           <a href="https://www.linkedin.com/in/iqbalperkasa">LinkedIn</a>
           <a href="https://iqbalperkasa.com/resume">Resume</a>
-          <a href="https://iqbalperkasa.com/portfolio">Portfolio</a>
+          <!-- <a href="https://iqbalperkasa.com/portfolio">Portfolio</a> -->
         </p>
       </nav>
     </div>
