--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
       </header>
 
       <section>
-        <p>Web product developer</p>
-        <p>Software engineer</p>
+        <p>Frontend engineer</p>
       </section>
 
       <section>
         <p class="title">Currently</p>
-        <p>Frontend engineer, <a href="https://rock.so/">Rock</a></p>
+        <p>Software engineer web, <a href="https://www.luno.com">Luno</a></p>
       </section>
 
-      <section>
+      <!-- <section>
         <p class="title">Past</p>
         <p>Bukalapak</p>
-      </section>
+      </section> -->
 
       <section>
         <p class="title">Residence</p>
