--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <section>
         <p class="title">Currently</p>
-        <p>Software engineer web, <a href="https://www.luno.com">Luno</a></p>
+        <p>Frontend engineer, <a href="https://www.luno.com">Luno</a></p>
       </section>
 
       <!-- <section>
