--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h1>Iqbal Perkasa</h1>
       </header>
 
-      <section>
+      <!-- <section>
         <p>Frontend engineer</p>
-      </section>
+      </section> -->
 
       <section>
         <p class="title">Currently</p>
@@ -32,13 +32,13 @@
         <p>Bukalapak</p>
       </section> -->
 
-      <section>
+      <!-- <section>
         <p class="title">Residence</p>
         <p>Jakarta/Bandung, Indonesia</p>
-      </section>
+      </section> -->
 
       <nav>
-        <p class="title">Handles</p>
+        <!-- <p class="title">Handles</p> -->
         <p class="handles">
           <a href="https://github.com/iqbalperkasa">GitHub</a>
           <a href="https://www.linkedin.com/in/iqbalperkasa">LinkedIn</a>
