--- a/index.html
+++ b/index.html
@@ -18,28 +18,26 @@
         <h1>Iqbal Perkasa</h1>
       </header>
 
-      <section>
-        <p>Web product developer</p>
-        <p>Software engineer</p>
-      </section>
+      <!-- <section>
+        <p>Frontend engineer</p>
+      </section> -->
 
       <section>
-        <p class="title">Currently</p>
-        <p>Frontend engineer, <a href="https://rock.so/">Rock</a></p>
+        <p>Frontend engineer, <a href="https://www.luno.com">Luno</a></p>
       </section>
 
-      <section>
+      <!-- <section>
         <p class="title">Past</p>
         <p>Bukalapak</p>
-      </section>
+      </section> -->
 
-      <section>
+      <!-- <section>
         <p class="title">Residence</p>
         <p>Jakarta/Bandung, Indonesia</p>
-      </section>
+      </section> -->
 
       <nav>
-        <p class="title">Handles</p>
+        <!-- <p class="title">Handles</p> -->
         <p class="handles">
           <a href="https://github.com/iqbalperkasa">GitHub</a>
           <a href="https://www.linkedin.com/in/iqbalperkasa">LinkedIn</a>
