--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section> -->
 
       <section>
-        <p>Frontend engineer, <a href="https://www.luno.com">Luno</a></p>
+        <p>Frontend engineer</p>
       </section>
 
       <!-- <section>
@@ -41,7 +41,7 @@
         <p class="handles">
           <a href="https://github.com/iqbalperkasa">GitHub</a>
           <a href="https://www.linkedin.com/in/iqbalperkasa">LinkedIn</a>
-          <a href="https://iqbalperkasa.com/resume">Resume</a>
+          <a href="https://read.cv/iqbalperkasa">CV</a>
           <!-- <a href="https://iqbalperkasa.com/portfolio">Portfolio</a> -->
         </p>
       </nav>
